# Internal-Access-Control-Policy-Engine

./: .gitignore  .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cli/: main.py
docs/: architecture.md  decision_flow.md  policy_contract.md  policy_lifecycle.md
engine/: __init__.py  context.py  decision.py  errors.py  evaluator.py  operators.py  policy_set.py  target_matcher.py
examples/: context.json  policy.yaml
tests/engine/: test_evaluator.py  test_policy_set.py
tests/fixtures/: context.py  policy.py
tests/validation/: test_policy_validator.py  test_schema.py
validation/: policy_validator.py  schema.py
